--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./src/img/KERALADRIVES.png" />
+  <link rel="icon" type="image/svg+xml" href="https://enquiry.keraladrives.com/assets/KERALADRIVES-Dk-P4RNg.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO Meta Tags -->
