--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="https://enquiry.keraladrives.com/assets/KERALADRIVES-Dk-P4RNg.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/svg+xml" href="https://enquiry.keraladrives.com/assets/KERALADRIVES-Dk-P4RNg.png" />
+
+
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"  />
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+	<link rel="manifest" href="/site.webmanifest">
+
+
 
   <!-- SEO Meta Tags -->
   <meta name="description"
