updated index html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,40 @@
   <meta name="twitter:image" content="https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png" />
 
   <title>Kerala Drives Tours and Travels</title>
+
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "TravelAgency",
+      "name": "Kerala Drives Tours and Travels",
+      "url": "https://enquiry.keraladrives.com",
+      "image": "https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png",
+      "description": "Kerala Drives offers the best tours and travel experiences across Kerala. Explore scenic beauty, culture, and adventure with personalized itineraries.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressCountry": "IN",
+        "addressRegion": "Kerala"
+      },
+      "areaServed": {
+        "@type": "State",
+        "name": "Kerala"
+      },
+      "makesOffer": {
+        "@type": "Offer",
+        "itemOffered": [
+          {
+            "@type": "TourPackage",
+            "name": "Kerala Adventure Tours"
+          },
+          {
+            "@type": "TourPackage",
+            "name": "Kerala Luxury Tours"
+          }
+        ]
+      }
+    }
+    </script>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-LXS495JD2X"></script>
   <script>
