--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     content="Discover the beauty of Kerala with Kerala Drives, your trusted tour and travel partner. Explore the best of Kerala with guided tours, adventure activities, and luxury stays." />
  <meta property="og:image:secure_url" content="https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png" />
 <meta property="og:image:type" content="image/png" />
+<meta property="og:image:type" content="image/png" />
   <meta property="og:url" content="https://enquiry.keraladrives.com" />
   <meta property="og:type" content="website" />
 
