--- a/index.html
+++ b/index.html
@@ -8,33 +8,31 @@
 
   <!-- Favicon Links -->
   <link rel="shortcut icon" href="https://enquiry.keraladrives.com/favicon.ico" type="image/x-icon" />
-  <link rel="icon" type="image/png" sizes="32x32" href="https://enquiry.keraladrives.com/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://enquiry.keraladrives.com/favicon-16x16.png">
-  <link rel="apple-touch-icon" href="https://enquiry.keraladrives.com/apple-touch-icon.png">
-  <link rel="manifest" href="https://enquiry.keraladrives.com/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://enquiry.keraladrives.com/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="https://enquiry.keraladrives.com/favicon-16x16.png" />
+  <link rel="apple-touch-icon" href="https://enquiry.keraladrives.com/apple-touch-icon.png" />
+  <link rel="manifest" href="https://enquiry.keraladrives.com/site.webmanifest" />
 
   <!-- SEO Meta Tags -->
-  <meta name="description"
-    content="Kerala Drives offers the best tours and travel experiences across Kerala. Explore scenic beauty, culture, and adventure with personalized itineraries." />
-  <meta name="keywords"
-    content="Kerala tours, Kerala travel, Kerala tourism, tour packages, adventure tourism, Kerala drives, travel experiences, vacation Kerala" />
+  <meta name="description" content="Kerala Drives offers the best tours and travel experiences across Kerala. Explore scenic beauty, culture, and adventure with personalized itineraries." />
+  <meta name="keywords" content="Kerala tours, Kerala travel, Kerala tourism, tour packages, adventure tourism, Kerala drives, travel experiences, vacation Kerala" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph Meta Tags for Social Media -->
   <meta property="og:title" content="Kerala Drives Tours and Travels" />
-  <meta property="og:description"
-    content="Discover the beauty of Kerala with Kerala Drives, your trusted tour and travel partner. Explore the best of Kerala with guided tours, adventure activities, and luxury stays." />
- <meta property="og:image:secure_url" content="https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png" />
-<meta property="og:image:type" content="image/png" />
-<meta property="og:image:type" content="image/png" />
+  <meta property="og:description" content="Discover the beauty of Kerala with Kerala Drives, your trusted tour and travel partner. Explore the best of Kerala with guided tours, adventure activities, and luxury stays." />
+  <meta property="og:image" content="https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png" />
+  <meta property="og:image:secure_url" content="https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:url" content="https://enquiry.keraladrives.com" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Kerala Drives Tours and Travels" />
-  <meta name="twitter:description"
-    content="Plan your next Kerala tour with Kerala Drives. From scenic trips to luxury stays, we offer customized itineraries for every traveler." />
+  <meta name="twitter:description" content="Plan your next Kerala tour with Kerala Drives. From scenic trips to luxury stays, we offer customized itineraries for every traveler." />
   <meta name="twitter:image" content="https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png" />
 
   <!-- Structured Data -->
@@ -116,8 +114,7 @@
     <h1>Welcome to Kerala Drives Tours and Travels</h1>
   </header>
   <div class="content">
-    <p>Explore the scenic beauty, culture, and adventure of Kerala with personalized itineraries. Contact us for more
-      details!</p>
+    <p>Explore the scenic beauty, culture, and adventure of Kerala with personalized itineraries. Contact us for more details!</p>
   </div>
   <div id="root"></div>
   <div id="cookie-consent-portal"></div>
