--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <!-- Open Graph Meta Tags for Social Media -->
   <meta property="og:title" content="Kerala Drives Tours and Travels" />
   <meta property="og:description" content="Discover the beauty of Kerala with Kerala Drives, your trusted tour and travel partner. Explore the best of Kerala with guided tours, adventure activities, and luxury stays." />
-  <meta property="og:image" content="https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png" />
-  <meta property="og:image:secure_url" content="https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png" />
+  <meta property="og:image" content="https://enquiry.keraladrives.com/Thumbnail.png" />
+  <meta property="og:image:secure_url" content="https://enquiry.keraladrives.com/Thumbnail.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -33,7 +33,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Kerala Drives Tours and Travels" />
   <meta name="twitter:description" content="Plan your next Kerala tour with Kerala Drives. From scenic trips to luxury stays, we offer customized itineraries for every traveler." />
-  <meta name="twitter:image" content="https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png" />
+  <meta name="twitter:image" content="https://enquiry.keraladrives.com/Thumbnail.png" />
 
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -42,7 +42,7 @@
       "@type": "TravelAgency",
       "name": "Kerala Drives Tours and Travels",
       "url": "https://enquiry.keraladrives.com",
-      "image": "https://enquiry.keraladrives.com/assets/Fun-Adventure-gilP1OX-.png",
+      "image": "https://enquiry.keraladrives.com/Thumbnail.png",
       "description": "Kerala Drives offers the best tours and travel experiences across Kerala. Explore scenic beauty, culture, and adventure with personalized itineraries.",
       "address": {
         "@type": "PostalAddress",
