added new g tag

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
   <link rel="manifest" href="https://enquiry.keraladrives.com/site.webmanifest" />
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="Kerala Drives offers the best tours and travel experiences across Kerala. Explore scenic beauty, culture, and adventure with personalized itineraries." />
-  <meta name="keywords" content="Kerala tours, Kerala travel, Kerala tourism, tour packages, adventure tourism, Kerala drives, travel experiences, vacation Kerala" />
+  <meta name="description"
+    content="Kerala Drives offers the best tours and travel experiences across Kerala. Explore scenic beauty, culture, and adventure with personalized itineraries." />
+  <meta name="keywords"
+    content="Kerala tours, Kerala travel, Kerala tourism, tour packages, adventure tourism, Kerala drives, travel experiences, vacation Kerala" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph Meta Tags for Social Media -->
   <meta property="og:title" content="Kerala Drives Tours and Travels" />
-  <meta property="og:description" content="Discover the beauty of Kerala with Kerala Drives, your trusted tour and travel partner. Explore the best of Kerala with guided tours, adventure activities, and luxury stays." />
+  <meta property="og:description"
+    content="Discover the beauty of Kerala with Kerala Drives, your trusted tour and travel partner. Explore the best of Kerala with guided tours, adventure activities, and luxury stays." />
   <meta property="og:image" content="https://enquiry.keraladrives.com/Thumbnail.png" />
   <meta property="og:image:secure_url" content="https://enquiry.keraladrives.com/Thumbnail.png" />
   <meta property="og:image:type" content="image/png" />
@@ -32,7 +35,8 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Kerala Drives Tours and Travels" />
-  <meta name="twitter:description" content="Plan your next Kerala tour with Kerala Drives. From scenic trips to luxury stays, we offer customized itineraries for every traveler." />
+  <meta name="twitter:description"
+    content="Plan your next Kerala tour with Kerala Drives. From scenic trips to luxury stays, we offer customized itineraries for every traveler." />
   <meta name="twitter:image" content="https://enquiry.keraladrives.com/Thumbnail.png" />
 
   <!-- Structured Data -->
@@ -70,20 +74,31 @@
   </script>
 
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LXS495JD2X"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-LXS495JD2X"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-LXS495JD2X');
+  </script> -->
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10818493960">
+  </script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'AW-10818493960');
   </script>
 
   <!-- CSS for Responsiveness -->
- 
+
 </head>
 
 <body>
- 
+
   <div id="root"></div>
   <div id="cookie-consent-portal"></div>
   <script type="module" src="/src/main.jsx"></script>
