--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
   </script>
 
   <!-- Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-LXS495JD2X"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LXS495JD2X"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'G-LXS495JD2X');
-  </script> -->
+  </script>
   
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=AW-10818493960">
